css/style.css
/* ... */
.event01 {
  background-image: url(../Assets/RedWineEvent.png);
}
.eventText {
  color: var(--color-navy);
  font-family: var(--font-secondary);
  font-weight: 900;
  font-size: 1.2rem;
}

.event02 {
  background-image: url(../Assets/WinePairingEvent.png);
}

.transparentRectangle {
  background-color: rgba(255, 198, 201, 0.6);
  width: auto;
  height: 100%;
  padding: 2rem;
  border: var(--color-accent-red) 3px solid;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

#newWine {
  grid-row: 4;
  grid-column: 2;
}
#Contact {
  grid-row: 5;
  grid-column: 2;

  border-bottom: 3px solid var(--color-navy);
}

/***************** navigation ****************/
#home_link_mobile {
  color: var(--color-navy);
  font-family: var(--font-logo);
  font-size: 1.7rem;
  flex-grow: 2;
  font-weight: 800;
}

.logotype,
.home_link {
  font-family: var(--font-logo);
}
.home_link {
  font-size: 1.5rem;
  font-weight: 800;
}

.NavBar {
  display: flex;
  flex-direction: row;
  gap: 1rem;
  justify-content: space-between;
  padding: 0.4rem;
  padding-right: 1rem;
  border-bottom: 3px solid var(--color-navy);
  align-items: center;
}
.cart {
  background-image: url(../Assets/clarity_shopping-cart-linecart.svg);
  background-size: 2rem;
  width: 2rem;
  height: 2rem;
  background-repeat: no-repeat;
}

/********************** sticky menu ****************/
#sticky_nav_menu {
  position: sticky;
  top: 13rem;
  grid-row: 1/4;
  grid-column: 1;
  padding-left: 0.5rem;
  padding-top: 0.5rem;
}
.list_menu_sticky {
  display: flex;
  flex-direction: column;
  gap: 0.8rem;
}
.list_menu_sticky li {
  width: 100%;
}
.submenu {
  display: none;
}
/* .list_menu_sticky li:hover {
  transform: scale(1.2);
  transition: all 400ms ease-in-out;
} */

/******************* burger menu ****************/
.burger_menu div {
  background-color: var(--color-accent-red);
  width: 2rem;
  height: 0.3rem;
  margin: 5px;
  border-radius: 3px;
}
.burger_menu {
  display: none;
}
.list_menu_burger {
  display: none;
}
.line1,
.line2,
.line3 {
  transition: transform 400ms ease-in-out;
}

.menu_name {
  font-weight: 700;
  font-size: 1.2rem;
}
.menu_name1 {
  font-weight: 700;
  font-size: 1.2rem;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
}
/* .menu_name1::after {
  content: "+";
  height: auto;
  width: auto;
  margin: 0 1.7rem;
} */

li {
  height: 100%;
}
/**** flags  ****/
.flag_dk {
  background-image: url(../Assets/circle-flags_dkcircle_flag_dk.svg);
  background-size: 1.2rem;
  width: 1.2rem;
  height: 1.2rem;
}
.flag_en {
  background-image: url(../Assets/circle-flags_encircle_flag_en.svg);
  background-size: 1.2rem;
  width: 1.2rem;
  height: 1.2rem;
}
.flags {
  display: flex;
  flex-direction: row;

  align-items: center;
  gap: 0.5rem;
}

@media only screen and (max-width: 600px) {
  .burger_menu {
    display: block;
    cursor: pointer;
  }
  .list_menu_burger {
    display: flex;
    flex-direction: column;
    gap: 0;

    position: absolute;
    right: -80vw;
    height: auto;
    top: 56px;
    width: 60%;
    background-color: var(--color-primary-offwhite);
    justify-content: flex-start;
    /* transform: translateX(100%);
    transition: transform 0.5s ease-in-out; */

    border-bottom-left-radius: 10%;
    border: 3px solid var(--color-navy);
    text-align: center;
    transition: transform 1s;
    z-index: 100;
  }
  .list_menu_active {
    transform: translateX(-80vw);
  }

  .list_menu_sticky {
    display: none;
  }
  .home_link {
    display: none;
  }
  .line1_active {
    transform: rotate(45deg) translateX(7px) translateY(10px);
    transition: transform 400ms ease-in-out;
  }
  .line3_active {
    transform: rotate(-45deg) translateX(3px) translateY(-7px);
    transition: transform 400ms ease-in-out;
  }
  .line2_active {
    transform: translateX(100vh);
    transition: transform 400ms ease-in-out;
  }

  .list_menu_burger li,
  .list_menu_active li {
    border-bottom: 3px solid var(--color-navy);
    padding: 1rem 0;
  }
  .list_menu_burger li:last-child {
    border-bottom: none;
  }

  .flag_dk {
    background-image: url(../Assets/circle-flags_dkcircle_flag_dk.svg);
    background-size: 1.8rem;
    width: 1.8rem;
    height: 1.8rem;
  }
  .flag_en {
    background-image: url(../Assets/circle-flags_encircle_flag_en.svg);
    background-size: 1.8rem;
    width: 1.8rem;
    height: 1.8rem;
  }
  .flags {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    gap: 1rem;
  }
}

/* links */
a {
  text-decoration: none;
  cursor: pointer;
  color: var(--color-navy);
}

a:link {
  color: var(--color-navy);
}

/* a:visited {
  color: var(--color-primary-offwhite-600);
} */

a:hover {
  color: var(--color-accent-red);
}
a:active {
  color: var(--color-white);
}

/* quote */
.open_quote {
  background-image: url(../Assets/“open-quote.svg);
  width: 2rem;
  height: 2rem;
  background-size: 2rem;
  background-repeat: no-repeat;
  justify-self: right;
  margin-top: 0.5rem;
  align-self: end;
}
.close_quote {
  background-image: url(../Assets/“close-quote.svg);
  width: 2rem;
  height: 2rem;
  background-size: 2rem;
  background-repeat: no-repeat;
  grid-column: 3;
  grid-row: 3;
}
#TopQuote {
  font-family: var(--font-secondary);
  font-weight: lighter;
  text-transform: uppercase;

  display: grid;
  grid-template-columns: 15% 70% 15%;
  grid-template-rows: repeat(3, auto);

  color: var(--color-navy);
  grid-row: 1;
  grid-column: 2;
  padding: 1rem 0;
}
.quote {
  grid-column: 2;
  grid-row: 2;
  font-weight: 300;
  font-size: 2rem;
  text-align: center;
}

/********************** FOOTER *************/
footer p {
  color: var(--color-navy);
}
iframe {
  max-width: 100%;
}

.footercontainer {
  border-top: 3px solid var(--color-navy);
  display: grid;
  grid-template-columns: 1fr;
}
/* ... */

